# agent-ready

./: .gitignore  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LAUNCH.md  README.md  SECURITY.md  action.yml  package.json
.cursor/rules/: agent-ready.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  npm-publish.yml
docs/: architecture.md  detectors.md  growth-metrics.md  growth-playbook.md  launch-kit.md  npm-publishing.md  outreach-automation.md  showcase.md
docs/adr/: 0001-agent-readiness.md
docs/examples/: README.md  issue-checklist.md  multi-repo-roadmap.md  real-world-snapshots.md  single-repo-improvement.md  snapshot.md
docs/releases/: v0.1.26.md
ops/: com.eshen.agent-ready-outreach.plist
scripts/: benchmark-sample.mjs  outreach-operator.mjs  render-demo-gif.py  run-outreach-operator.sh
src/: benchmark.mjs  ci.mjs  cli.mjs  comment.mjs  compare.mjs  config.mjs  examples.mjs  explainer.mjs  fs-utils.mjs  generator.mjs  improver.mjs  interactive.mjs  linter.mjs  matrix.mjs  outreach-operator.mjs  outreach.mjs  presets.mjs  reporter.mjs  scanner.mjs  snapshot.mjs  workflow.mjs
test/: cli.test.mjs  outreach-operator.test.mjs  scanner.test.mjs
test/fixtures/astro-app/: package.json
test/fixtures/poetry-python-app/: pyproject.toml
test/fixtures/poetry-python-app/app/: main.py
test/fixtures/poetry-python-app/tests/: test_main.py
test/fixtures/python-poetry-app/: pyproject.toml
(+67 files in other folders)
